@@ -12,7 +12,11 @@
   <li>the <a href="waterfall">Waterfall Display</a> will give you a
   time-oriented summary of recent buildbot activity.</li>
 
-  <li><a href="one_line_per_build">Recent Builds</a> are summarized here.</li>
+  <li>The <a href="one_box_per_builder">Latest Build</a> for each builder is
+  here.</li>
+
+  <li><a href="one_line_per_build">Recent Builds</a> are summarized here, one
+  per line.</li>
 
   <li><a href="buildslaves">Buildslave</a> information</li>
   <li><a href="changes">ChangeSource</a> information.</li>
